Add 'Open New Account' button to dashboard header

--- a/bank-frontend/src/app/dashboard/dashboard.html
+++ b/bank-frontend/src/app/dashboard/dashboard.html
@@ -1,6 +1,9 @@
 <div class="dashboard-container">
   <div class="dashboard-header">
     <h1>My Accounts</h1>
+    <a mat-raised-button color="primary" routerLink="/create-account">
+      <mat-icon>add</mat-icon> Open New Account
+    </a>
   </div>
 
   <div class="accounts-grid">
